<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recipeViewActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp">
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:background="@color/white"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp"
        android:layout_alignParentEnd="true">
        <ImageButton
            android:id="@+id/addToFavBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@color/white"
            android:src="@drawable/baseline_favorite_border_24"/>
    </androidx.cardview.widget.CardView>
    <ImageView
        android:id="@+id/thumbnailImage"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        android:contentDescription="@string/thumbnail" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="300dp"/>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:elevation="1dp"
                app:cardCornerRadius="20dp">
                <View
                    android:layout_width="70dp"
                    android:layout_height="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center_horizontal"
                    android:background="#ABABAB"/>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-30dp"
                android:elevation="2dp"
                android:orientation="vertical"
                android:background="@color/white">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/recipeName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textStyle="bold"
                        android:layout_marginEnd="120dp"
                        android:textSize="24sp"/>
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="11dp"
                        android:backgroundTint="@color/green"
                        app:cardCornerRadius="12dp">
                        <TextView
                            android:id="@+id/ratingNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="5dp"
                            android:text="4.5"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:drawableEndCompat="@drawable/baseline_star_24" />
                    </androidx.cardview.widget.CardView>
                </RelativeLayout>

                <TextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="-5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="Category"
                    android:textStyle="bold"
                    android:textSize="16sp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:baselineAligned="false">
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#CDCDCD"
                            android:layout_margin="3dp"
                            android:layout_centerInParent="true"
                            app:cardCornerRadius="24dp">
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp">
                                <TextView
                                    android:id="@+id/cookingTime"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginEnd="4dp"
                                    android:text="@string/n_a"/>
                                <androidx.cardview.widget.CardView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:backgroundTint="@color/green"
                                    android:layout_margin="2dp"
                                    app:cardCornerRadius="17dp">
                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="5dp"
                                        android:src="@drawable/baseline_timer_24"/>
                                </androidx.cardview.widget.CardView>
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_margin="3dp"
                            android:backgroundTint="#CDCDCD"
                            app:cardCornerRadius="24dp">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp">

                                <TextView
                                    android:id="@+id/caloriesContains"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginEnd="4dp"
                                    android:text="@string/n_a" />

                                <androidx.cardview.widget.CardView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:backgroundTint="@color/green"
                                    android:layout_margin="2dp"
                                    app:cardCornerRadius="17dp">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="5dp"
                                        android:src="@drawable/baseline_calories_24" />
                                </androidx.cardview.widget.CardView>
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#CDCDCD"
                            android:layout_margin="3dp"
                            android:layout_centerInParent="true"
                            app:cardCornerRadius="24dp">
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp">
                                <TextView
                                    android:id="@+id/serveNumber"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginEnd="4dp"
                                    android:text="@string/n_a"/>
                                <androidx.cardview.widget.CardView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:backgroundTint="@color/green"
                                    android:layout_margin="2dp"
                                    app:cardCornerRadius="17dp">
                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="5dp"
                                        android:src="@drawable/baseline_people_24"/>
                                </androidx.cardview.widget.CardView>
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                    </RelativeLayout>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:fontFamily="serif"
                    android:text="@string/about_the_dish"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"/>
                <com.google.android.gms.ads.AdView
                    android:id="@+id/googleAd3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:adSize="BANNER"
                    app:adUnitId="ca-app-pub-2274745696222909/8623157401"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:fontFamily="serif"
                    android:text="@string/ingredients"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/ingredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_marginEnd="25dp" />

                <com.google.android.gms.ads.AdView
                    android:id="@+id/googleAd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:adSize="BANNER"
                    app:adUnitId="@string/ad_at_recipe_view_below_above_instruction_id"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:fontFamily="serif"
                    android:text="@string/instructions"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/instructions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"/>
                <TextView
                    android:id="@+id/videoTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:fontFamily="serif"
                    android:text="@string/recipe_video"
                    android:textColor="@color/black"
                    android:visibility="gone"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtube_player_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_margin="10dp"
                    android:keepScreenOn="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:fontFamily="serif"
                    android:text="@string/rate_this_recipe"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="60dp"
                    android:numStars="5"
                    android:stepSize="1.0"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <com.google.android.gms.ads.AdView
        android:id="@+id/googleAd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-2274745696222909/3489910913"/>
</RelativeLayout>