<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".loginActivity">
    <ImageView
        android:id="@+id/backgroundImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/pxfuel"
        android:scaleType="centerCrop"/>
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/welcomeLinearLayout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="Welcome!"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="16sp"
                android:text="Let's cook, share, and enjoy together with Cook Master, where every dish is a celebration!"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/userNameLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="-50dp"
                android:layout_gravity="center"
                app:cardCornerRadius="40dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:src="@drawable/baseline_person_24"/>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/rounded_shape">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_your_name"
                    android:layout_marginTop="60dp"
                    android:textSize="20sp"
                    android:labelFor="@+id/userName"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/userName"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="60dp"
                    android:background="@drawable/rounded_shape"
                    android:inputType="textCapWords"
                    android:autofillHints="name"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/emailLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="-50dp"
                android:layout_gravity="center"
                app:cardCornerRadius="40dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:src="@drawable/baseline_email_24"/>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:backgroundTint="@color/white"
                android:background="@drawable/rounded_shape">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_your_email"
                    android:layout_marginTop="60dp"
                    android:textSize="20sp"
                    android:labelFor="@+id/emailAddress"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/emailAddress"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="60dp"
                    android:background="@drawable/rounded_shape"
                    android:inputType="textEmailAddress"
                    android:autofillHints="emailAddress"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/languageLinearLayout"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="-50dp"
                android:layout_gravity="center"
                app:cardCornerRadius="40dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:src="@drawable/baseline_language_24"/>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/rounded_shape">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_the_language"
                    android:layout_marginTop="60dp"
                    android:textSize="20sp"
                    android:labelFor="@+id/emailAddress"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp">
                        <LinearLayout
                            android:id="@+id/englishBtn"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:gravity="center"
                            android:paddingStart="20dp"
                            android:background="@drawable/rounded_shape"
                            android:paddingEnd="20dp"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:layout_marginEnd="20dp"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="English"
                                android:textColor="@color/black"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="अंग्रेज़ी"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/hindiButton"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:gravity="center"
                            android:paddingStart="20dp"
                            android:background="@drawable/rounded_shape"
                            android:paddingEnd="20dp"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Hindi"
                                android:textColor="@color/black"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="हिंदी"/>
                        </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/nextBtn"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:cardCornerRadius="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-60dp"
        android:backgroundTint="@color/orange"
        android:layout_marginEnd="-60dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:textColor="@color/white"
            android:layout_marginTop="70dp"
            android:text="Next"
            android:textSize="18sp"/>
    </androidx.cardview.widget.CardView>
</RelativeLayout>